@@ -36,6 +36,7 @@ public class AlmacenajeContenedoresRyP {
         Scanner sc;
         try {
             sc = new Scanner(new FileReader(args[0]));
+            // sc = new Scanner(new FileReader("test02.txt"));
             int capacityC = Integer.parseInt(sc.nextLine());
             String[] parts = sc.nextLine().split(" ");
             Integer[] setsS = new Integer[parts.length];
@@ -60,16 +61,21 @@ public class AlmacenajeContenedoresRyP {
         if(setsS.length % 2 == 0){
             for(int i = 0; i < setsS.length - 1; i += 2){
                 pairSum = setsS[i] + setsS[i+1];
-                bestK += (pairSum/capacityC) + 1;
+                bestK += (pairSum % capacityC == 0)? pairSum / capacityC : (pairSum / capacityC) + 1;
             }
 
             return bestK;
         } else{
             for(int i = 0; i < setsS.length - 2; i += 2){
                 pairSum = setsS[i] + setsS[i+1];
-                bestK += (pairSum/capacityC) + 1;
+                bestK += (pairSum % capacityC == 0)? pairSum / capacityC : (pairSum / capacityC) + 1;
             }
-            bestK += setsS[setsS.length - 1]/capacityC; //add the last one
+
+            // add the last one
+            int last = setsS[setsS.length - 1];
+            bestK += (last % capacityC == 0)? last / capacityC : 
+                (last / capacityC) + 1;
+
             return bestK;
         }
     }
@@ -88,10 +94,11 @@ public class AlmacenajeContenedoresRyP {
         numberOfRecCalls++;
 
         // Lower bound
-        // Calcular el numero de contenedores minimo teorico adicionales necesarios
+        // Calculate the minimum theoric number of containers for the space remaining
         int lowerBound = (sumaRestante + capacityC - 1)/capacityC;
 
-        if(distribution.size() + lowerBound >= bestK) return;
+        // if the number of containers + lowerBound is greater than bestK, stops this branch execution
+        if(distribution.size() + lowerBound > bestK) return;
 
         // Base case
         if (indexS == setsS.length) {
@@ -103,12 +110,15 @@ public class AlmacenajeContenedoresRyP {
             return;
         }
 
-        for (int pos = 0; pos < distribution.size(); pos++) {
+        int size = distribution.size();
+        for (int pos = 0; pos < size; pos++) {
             // tries to add it to an existant container
             if (!setsFlag[indexS] && sum(distribution.get(pos)) + setsS[indexS] <= capacityC) {
                 distribution.get(pos).add(setsS[indexS]);
                 setsFlag[indexS] = true;
+
                 backtracking(indexS + 1, distribution, sumaRestante - setsS[indexS]);
+
                 setsFlag[indexS] = false;
                 if (distribution.size() != 0) {
                     distribution.get(pos).removeLast();
@@ -119,15 +129,14 @@ public class AlmacenajeContenedoresRyP {
         // could not add it to an existant one, creates a new container
         ArrayList<Integer> newContainer = new ArrayList<Integer>();
         newContainer.add(setsS[indexS]);
-        setsFlag[indexS] = true;
-        int indexNewInsertion = distribution.size();
+        setsFlag[indexS] = true;    
         distribution.add(newContainer);
 
         backtracking(indexS + 1, distribution, sumaRestante - setsS[indexS]);
         
         setsFlag[indexS] = false;
         if (distribution.size() != 0) {
-            distribution.get(indexNewInsertion).removeLast();
+            distribution.remove(distribution.size() - 1);
         }
     }
 
@@ -165,50 +174,50 @@ public class AlmacenajeContenedoresRyP {
     // Prints the solution: Containers distribution and number of containers
     // required
     public void logSolution() {
-        BufferedWriter bf = null;
-        try {
-            bf = new BufferedWriter(new FileWriter("result.txt"));
+        // BufferedWriter bf = null;
+        // try {
+        //     bf = new BufferedWriter(new FileWriter("result.txt"));
 
-            bf.write("Lista de contenedores y objetos contenidos:\n");
+        //     bf.write("Lista de contenedores y objetos contenidos:\n");
 
-            for (int i = 0; i < bestDistribution.size(); i++) {
-                bf.write("Contenedor " + i + ": ");
-                for (int j = 0; j < bestDistribution.get(i).size(); j++) {
-                    bf.write(bestDistribution.get(i).get(j) + " ");
-                }
-                bf.write("\n");
-            }
-
-            bf.write("El numero de contenedores necesarios es: " + bestK + "\n");
-            bf.write("Se necesitaron " + numberOfRecCalls + " llamadas recursivas.\n");
-        } catch (IOException ioe) {
-            System.out.println("No se pudo abrir el fichero de log");
-        } finally{
-            try{
-                if(bf != null) {
-                    bf.close();
-                }
-            } catch(IOException ioe){
-                System.out.println("Error: No se pudo cerrar el archivo");
-            }   
-        }
-
-        // System.out.println("Lista de contenedores y objetos contenidos: ");
-        // for (int i = 0; i < bestDistribution.size(); i++) {
-        //     System.out.printf("Contenedor %d: ", i);
-        //     for (int j = 0; j < bestDistribution.get(i).size(); j++) {
-        //         if (j == bestDistribution.get(i).size() - 1) {
-        //             System.out.printf("%d ", bestDistribution.get(i).get(j));
-        //             System.out.println();
-        //         } else {
-        //             System.out.printf("%d ", bestDistribution.get(i).get(j));
+        //     for (int i = 0; i < bestDistribution.size(); i++) {
+        //         bf.write("Contenedor " + i + ": ");
+        //         for (int j = 0; j < bestDistribution.get(i).size(); j++) {
+        //             bf.write(bestDistribution.get(i).get(j) + " ");
         //         }
+        //         bf.write("\n");
         //     }
+
+        //     bf.write("El numero de contenedores necesarios es: " + bestK + "\n");
+        //     bf.write("Se necesitaron " + numberOfRecCalls + " llamadas recursivas.\n");
+        // } catch (IOException ioe) {
+        //     System.out.println("No se pudo abrir el fichero de log");
+        // } finally{
+        //     try{
+        //         if(bf != null) {
+        //             bf.close();
+        //         }
+        //     } catch(IOException ioe){
+        //         System.out.println("Error: No se pudo cerrar el archivo");
+        //     }   
         // }
 
-        // System.out.printf("El numero de contenedores necesarios es: %d", bestK);
-        // System.out.println();
-        // System.out.printf("Se necesitaron %d llamadas recursivas para resolver el problema.", numberOfRecCalls);
-        // System.out.println();
+        System.out.println("Lista de contenedores y objetos contenidos: ");
+        for (int i = 0; i < bestDistribution.size(); i++) {
+            System.out.printf("Contenedor %d: ", i);
+            for (int j = 0; j < bestDistribution.get(i).size(); j++) {
+                if (j == bestDistribution.get(i).size() - 1) {
+                    System.out.printf("%d ", bestDistribution.get(i).get(j));
+                    System.out.println();
+                } else {
+                    System.out.printf("%d ", bestDistribution.get(i).get(j));
+                }
+            }
+        }
+
+        System.out.printf("El numero de contenedores necesarios es: %d", bestK);
+        System.out.println();
+        System.out.printf("Se necesitaron %d llamadas recursivas para resolver el problema.", numberOfRecCalls);
+        System.out.println();
     }
 }
